# XYG-Studio-Module-Example

./: CMakeLists.txt  library.cpp  library.h
demo/: main.nut
lib/: libxyModuleExample.dylib
